--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^129.0.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
