--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "airtable": "^0.12.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.13",
     "googleapis": "^129.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.0.3",
